mid: 0000280 msg: Missatges d'error en les integracions
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@566 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -23,6 +23,7 @@ expedient.consulta.informe=Mostrar informe
 expedient.consulta.trobats=Hi ha {0} expedients que coincideixen amb els criteris especificats
 expedient.consulta.trobatun=Hi ha un expedient que coincideix amb els criteris especificats
 expedient.consulta.notrobats=No hi ha cap expedient que coincideixi amb els criteris especificats
+expedient.consulta.error.integracions=Aquest expedient conté errors provinents d'aplicacions externes
 expedient.consulta.confirm.esborrar=Estau segur que voleu esborrar aquest expedient?
 expedient.consulta.confirm.anular=Estau segur que voleu anul·lar aquest expedient?
 expedient.consulta.confirm.desanular=Estau segur que voleu tornar a activar aquest expedient?
@@ -56,7 +57,10 @@ expedient.document.confirm_esborrar_tasca=Estau segur que voleu esborrar aquest 
 expedient.document.confirm_modificar_documents=Es podran modificar documents ja introduïts. Voleu continuar?
 expedient.document.confirm_esborrar_signatures=Estau segur que voleu esborrar TOTES les signatures d'aquest document?
 expedient.document.verif_signatures=Verificació de signatures
-expedient.document.info_registre=Informació de registre
+expedient.document.info_registre=Document enviat al registre
+expedient.document.pendent.psigna=Pendent de signatura
+expedient.document.info_psigna=Document pendent del portasignatures
+expedient.document.pendent.psigna.error=Error en la comunicació amb el portasignatures
 expedient.editar.informacio=Modificar informació de l'expedient
 expedient.editar.iniciador=Iniciador
 expedient.editar.entrada_num=Entrada núm.
@@ -184,6 +188,9 @@ expedient.tasca.expresio_assignacio=Expressió d'assignació
 expedient.relacionar.ok=L'expedient s'ha relacionat correctament
 expedient.relacio.esborrar.ok=La relació s'ha esborrat correctament
 expedient.log.confirm.retrocedir=Estau segur que voleu retrocedir l'expedient fins a aquesta acció (inclosa)?
+expedient.psigna.reintentar.ok=El document s'ha processat correctament
+expedient.psigna.reintentar.error=El document s'ha processat amb errors
+
 expedient.tipus.form.crear_nou=Crear nou tipus d'expedient
 expedient.tipus.form.modificar=Modificar tipus d'expedient
 expedient.tipus.form.codi=Codi
@@ -560,6 +567,14 @@ common.icon.data=Data
 common.icon.entrada=Entrada
 common.icon.sortida=Sortida
 common.icon.numero=Número
+
+common.icones.doc.psigna.id=Id del portasignatures
+common.icones.doc.psigna.data.enviat=Enviat el
+common.icones.doc.psigna.estat=Estat
+common.icones.doc.psigna.data.proces.primer=Data resposta portasignatures
+common.icones.doc.psigna.data.proces.darrer=Data darrer intent de processar
+common.icones.doc.psigna.error.processant=Error al processar
+common.icones.doc.psigna.reintentar=Tornar a processar el document
 
 common.tabsarees.configurats=Configurades
 common.tabsarees.sense_conf=Sense configurar
