MANTIS_ID: 0000334 MSG: Retrocés d'expedients per tasques
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@571 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -135,6 +135,7 @@ expedient.registre.entitat=Entitat
 expedient.registre.missatge=Descripció
 expedient.registre.valorVell=Valor antic
 expedient.registre.valorNou=Valor nou
+expedient.tasques=Registre de tasques
 expedient.log=Registre d'accions
 expedient.log.accio=Acció
 expedient.log.accio.PROCES_VARIABLE_CREAR=Crear variable al procés
@@ -168,6 +169,7 @@ expedient.log.accio.EXPEDIENT_RELACIO_ESBORRAR=Esborrar expedient relacionat
 expedient.log.accio.EXPEDIENT_ACCIO=Executar acció de l'expedient
 expedient.log.accio.EXPEDIENT_RETROCEDIR=Retrocedir accions de l'expedient
 expedient.log.accio.PROCES_DOCUMENT_SIGNAR=Procesar document del portasignatures
+expedient.log.accio.EXPEDIENT_RETROCEDIR_TASQUES=Retrocedir tasques de l'expedient
 expedient.log.objecte=Element
 expedient.log.objecte.TASCA=Tasca
 expedient.log.objecte.PROCES=Procés
@@ -183,6 +185,11 @@ expedient.log.info.missatges=Missatges
 expedient.log.retrocedir=Retrocedir expedient fins a aquesta acció (inclosa)
 expedient.log.retroces.mostrar=Veure accions retrocedides
 expedient.log.retroces.llistat=Accions retrocedides
+expedient.log.retrocedits=Accions retrocedides
+expedient.log.accions.llistat=Accions de la tasca
+expedient.lot.token=Token
+expedient.log.tipus.detall=Veure registre detallat 
+expedient.log.tipus.tasca=Veure registre per tasques
 expedient.tasca.reassignar=Reassignar tasca
 expedient.tasca.expresio_assignacio=Expressió d'assignació
 expedient.relacionar.ok=L'expedient s'ha relacionat correctament
