mid:	0000341 msg:	Accions massives: execució d'scripts
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@583 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -140,8 +140,11 @@ error.generar.document.buit=La plantilla ha produit un document buit
 error.modificar.dades.exp=No s'han pogut modificar les dades de l'expedient
 
 error.executar.script=No s'ha pogut executar l'script
+error.modificar.variable=No s'ha pogut modificar la variable
 error.aturar.expedient=No s'ha pogut aturar l'expedient
 error.expedient.ja.aturat=Aquest expedient ja està aturat
+error.expedient.ja.aturat.exp=L'expedient
+error.expedient.ja.aturat.estat=ja està aturat
 error.reprendre.expedient=No s'ha pogut reprendre l'expedient
 error.expedient.no.aturat=Aquest expedient no està aturat
 error.especificar.versio.proces=No s'ha especificat cap versió de procés
