--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -9,6 +9,7 @@ expedient.consulta.tipusexpedient=Tipus d&#39;expedient
 expedient.consulta.select.tipusexpedient=Seleccioni un tipus d'expedient
 expedient.consulta.select.estat=Seleccioni un estat
 expedient.consulta.select.consula=Seleccioni una consulta
+expedient.consulta.select.variable=Seleccioni una variable
 expedient.consulta.estat=Estat
 expedient.consulta.entre=Entre
 expedient.consulta.consultar=Consultar
@@ -90,6 +91,7 @@ expedient.termini.modificar.tipus=Tipus de modificació
 expedient.termini.data.inici=Data d'inici
 expedient.termini.data.fi=Data de fi
 expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
+expedient.eines.confirm_modificar_variable=Estau segur que voleu modificar el valor d'aquesta variable en aquest(s) expedient(s)?
 expedient.eines.confirm_reprendre_tramitacio=Estau segur que voleu reprendre la tramitació d'aquest expedient?
 expedient.eines.confirm_executar_script_proces=Estau segur que voleu executar aquest script en aquest procés?
 expedient.eines.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquest procés?
@@ -100,6 +102,7 @@ expedient.eines.execucio_scripts=Execució d'scripts
 expedient.eines.script=Script
 expedient.eines.canviar_versio_proces=Canviar la versió del procés
 expedient.eines.canviar_versio=Canviar a la versió
+expedient.eines.modificar_variables=Variables
 expedient.info.informacio=Informació de l'expedient
 expedient.info.confirm.accio.executar=Estau segur que voleu executar aquesta acció?
 expedient.info.confirm.relacio.esborrar=Estau segur que voleu esborrar aquesta relació?
@@ -216,11 +219,13 @@ expedient.massiva.info=Expedients seleccionats
 expedient.massiva.canvi=Canviar selecció
 expedient.massiva.actualitzar=Canviar versió del procés principal
 expedient.massiva.accions=Executar acció
+expedient.massiva.executarScriptMas=Executar scripts
 expedient.massiva.mos_ocul=Mostrar/ocultar llistat d'expedients
 expedient.massiva.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquests processos?
 expedient.massiva.confirm_exec_accio=Estau segur que voleu executar l'acció en aquests expedients?
 expedient.massiva.tots=Tots
 expedient.massiva.exec_accio=Executar acció
+expedient.massiva.modificar_variables=Modificar variables
 
 
 comuns.georeferencia=Georeferència
@@ -344,7 +349,9 @@ info.document.guardats=Els documents s'ha guardat correctament
 info.informacio.modificat=La informació s'ha modificat correctament
 
 info.script.executat=L'script s'ha executat correctament
+info.variable.modificada=La variable s'ha modificat correctament
 info.expedient.aturat=L'expedient s'ha aturat correctament
+info.expedient.aturats=S'ha(n) aturat
 info.expedient.repres=L'expedient s'ha représ correctament
 info.canvi.versio.realitzat=El canvi de versió s'ha realitzat correctament
 info.canvi.versio.realitzat.nprimers=El canvi de versió s'ha realitzat correctament en els primers {0} expedients
@@ -447,6 +454,7 @@ comuns.executar=Executar
 comuns.iniciar=Iniciar
 comuns.membres=Membres
 comuns.modificar=Modificar
+comuns.modificar.valor=nou valor
 comuns.modificar_info=Modificar informació
 comuns.multiple=Múltiple
 comuns.no=No
