mid: 0000325 msg: Camp de tipus select i consultes per tipus
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@590 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -754,6 +754,7 @@ defproc.campform.ignored=No retrocedir valor
 defproc.campform.cache_text=Mantenir valor de la consulta
 defproc.campform.selec_consulta=Seleccioni una consulta
 defproc.campform.consultes.tipus=Consulta per tipus
+defproc.campform.domini_intern=Usar domini intern
 
 defproc.campllistat.confirmacio=Estau segur que voleu esborrar aquest registre?
 defproc.campllistat.validacions=Validacions
