MantisID: 0000343 Missatge: execució d'accions massives
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@592 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -92,6 +92,7 @@ expedient.termini.data.inici=Data d'inici
 expedient.termini.data.fi=Data de fi
 expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
 expedient.eines.confirm_modificar_variable=Estau segur que voleu modificar el valor d'aquesta variable en aquest(s) expedient(s)?
+expedient.eines.confirm_modificar_document=Estau segur que voleu modificar aquest document en aquest(s) expedient(s)?
 expedient.eines.confirm_reprendre_tramitacio=Estau segur que voleu reprendre la tramitació d'aquest expedient?
 expedient.eines.confirm_executar_script_proces=Estau segur que voleu executar aquest script en aquest procés?
 expedient.eines.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquest procés?
@@ -226,7 +227,7 @@ expedient.massiva.confirm_exec_accio=Estau segur que voleu executar l'acció en a
 expedient.massiva.tots=Tots
 expedient.massiva.exec_accio=Executar acció
 expedient.massiva.modificar_variables=Modificar variables
-
+expedient.massiva.documents=Modificar documents
 
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
