MantisID: 0000352 Missatge: Aturar retrocñés handler: mostra error enlloc de missatge
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@600 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -200,6 +200,7 @@ error.especificar.data=S'ha d'especificar la data
 error.extensio.document=L'extensió d'aquest document no està permesa
 
 error.executar.accio=No s'ha pogut executar l'acció
+error.executar.retroces=No s'ha pogut executar el retrocés
 error.validar.formulari=No s'ha pogut validar el formulari
 error.restaurar.formulari=No s'ha pogut restaurar el formulari
 error.afegir.camp.multiple=No s'ha pogut afegir el camp múltiple
