--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -28,6 +28,7 @@ error.camp.codi.char.nok=El codi no pot contenir punts
 error.camp.codi.maymin=El codi no pot començar amb una lletra majúscula i a continuació una minúscula
 error.camp.enumdomcons.buit=S'ha d'especificar una enumeració, un domini o una consulta
 error.camp.enumdomcons.tots=Només s'ha d'especificar un domini, una enumeració o una consulta
+error.camp.domini=Seleccioni un o altre
 error.permis.codi.repetit=Ja existeix un altre rol amb aquest codi
 error.info.expedient.imatgeproces=No hi ha imatge per a aquesta definició de procés
 
