--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -137,6 +137,7 @@ error.esborrar.signatura=No s'ha pogut esborrar la signatura
 error.modificar.doc.signat=No es pot modificar un document signat
 error.generar.document=No s'ha pogut generar el document
 error.generar.document.buit=La plantilla ha produit un document buit
+error.modificar.document.tipus=No hi ha cap document per modificar
 
 error.modificar.dades.exp=No s'han pogut modificar les dades de l'expedient
 
@@ -281,3 +282,4 @@ error.codi.var.incorrecte=El codi de la variable no pot començar per majúscula, 
 
 error.no.tiexep.selec=No hi ha cap tipus d'expedient seleccionat 
 error.no.exp.selec=No ha seleccionat cap expedient
+error.no.exp.selec.noDocAnnexat=Els expedients seleccionats no tenen cap document annexat per modificar
