--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -62,6 +62,8 @@ expedient.document.info_registre=Document enviat al registre
 expedient.document.pendent.psigna=Pendent de signatura
 expedient.document.info_psigna=Document pendent del portasignatures
 expedient.document.pendent.psigna.error=Error en la comunicació amb el portasignatures
+expedient.document.info.sensedocuments=No hi ha documents per modificar
+expedient.document.info.senseaccions=No hi ha accions per executar
 expedient.editar.informacio=Modificar informació de l'expedient
 expedient.editar.iniciador=Iniciador
 expedient.editar.entrada_num=Entrada núm.
