mid: 0000360 msg: Desenvolupament funcionalitat de grups ampliable
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@614 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -292,6 +292,7 @@ info.dades.importat=Les dades s'han importat correctament
 txt.desplegament.jbpm=Desplegament jBPM
 txt.exportacio.definicioProces=Exportació Definició de Procés
 txt.exportacio.tipusExpedient=Exportació Tipus d'Expedient
+txt.exportacio.helium=Exportació Helium
 info.arxiu.desplegat=L'arxiu s'ha desplegat amb èxit
 
 info.document.esborrat=El document s'ha esborrat correctament
