mid: 0000367 msg: Permetre actualitzar els expedients actius al desplegar una nova versió de procés
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@619 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -294,6 +294,8 @@ txt.exportacio.definicioProces=Exportació Definició de Procés
 txt.exportacio.tipusExpedient=Exportació Tipus d'Expedient
 txt.exportacio.helium=Exportació Helium
 info.arxiu.desplegat=L'arxiu s'ha desplegat amb èxit
+info.arxiu.desplegat.actualitzat=Les versions de procés s'han actualitzat amb èxit
+info.arxiu.desplegat.actualitzat.error=S'ha produit un error actualitzant les versions de procés
 
 info.document.esborrat=El document s'ha esborrat correctament
 info.document.esborrats=Els documents s'han esborrat correctament
@@ -786,6 +788,7 @@ defproc.deploy.tipus_despl=Tipus de desplegament
 defproc.deploy.item_buit=Qualsevol de l'entorn
 defproc.deploy.arxiu_exp=Arxiu exportat
 defproc.deploy.desplegar=Desplegar
+defproc.deploy.expedients.actualitzar=Actualitzar expedients actius?
 
 defproc.docform.es_plantilla=És plantilla
 defproc.docform.selec_camp=Seleccioni un camp
