mid:	380 msg:	Poder exportar reports a formats ODT, CSV, HTML, XML, RTF i XLS
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@643 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -676,7 +676,8 @@ consulta.form.valors=Valors predefinits
 consulta.form.exportar=Exportar actiu?
 consulta.form.ocultar=Oculta?
 consulta.form.desactivar=Desactivar?
-
+consulta.form.formatExportacio=Format d'exportació
+consulta.form.formatExportacio.seleccio=Seleccionau un format
 consulta.llistat.confirmacio=Estau segur que voleu esborrar aquesta consulta?
 consulta.llistat.vars_filtre=Variables del filtre
 consulta.llistat.nova=Nova consulta
