MID: 416, 417 MSG: A la consulta per tipus només es mostra l'últim element de les variables tipus registre. Afegir la reindexació d'expedients a la pestanya de eines de l'expedient, i a les accions massives
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@682 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -96,12 +96,16 @@ expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramit
 expedient.eines.confirm_modificar_variable=Estau segur que voleu modificar el valor d'aquesta variable en aquest(s) expedient(s)?
 expedient.eines.confirm_modificar_document=Estau segur que voleu modificar aquest document en aquest(s) expedient(s)?
 expedient.eines.confirm_reprendre_tramitacio=Estau segur que voleu reprendre la tramitació d'aquest expedient?
+expedient.eines.confirm_reindexar_expedient=Estau segur que voleu reindexar l'expedient?
+expedient.eines.confirm_reindexar_expedients=Estau segur que voleu reindexar el(s) expedient(s)?
 expedient.eines.confirm_executar_script_proces=Estau segur que voleu executar aquest script en aquest procés?
 expedient.eines.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquest procés?
 expedient.eines.aturar_tramitacio=Aturar la tramitació de l'expedient
 expedient.eines.reprendre_tramitacio=Reprendre la tramitació de l'expedient
 expedient.eines.motiu=Motiu
 expedient.eines.execucio_scripts=Execució d'scripts
+expedient.eines.reindexa_proces=Reindexar l'expedient
+expedient.eines.reindexar.expedients=Reindexar expedients
 expedient.eines.script=Script
 expedient.eines.canviar_versio_proces=Canviar la versió del procés
 expedient.eines.canviar_versio=Canviar a la versió
@@ -337,6 +341,9 @@ info.accio.executat.nprimers=L'acció s'ha executat correctament en els primers {
 info.accio.executades=Les accions s'han executat correctament
 info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
+info.expedient.reindexat=L'expedient s'ha reindexat correctament
+info.reindexar.executat=La reindexació s'ha realitzat correctament
+info.reindexar.executat.nprimers=La reindexació s'ha executat correctament en els primers {0} expedients
 
 info.dada.proces.esborrada=La dada ha estat esborrada del procés
 info.dada.tasca.esborrada=La dada ha estat esborrada de la tasca
@@ -471,6 +478,7 @@ comuns.pare=Pare
 comuns.persona=Persona
 comuns.propietats=Propietats
 comuns.reassignar=Reassignar
+comuns.reindexar=Reindexar
 comuns.reprendre=Reprendre
 comuns.sexe=Sexe
 comuns.si=Si
