--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -283,3 +283,5 @@ error.codi.var.incorrecte=El codi de la variable no pot començar per majúscula, 
 error.no.tiexep.selec=No hi ha cap tipus d'expedient seleccionat 
 error.no.exp.selec=No ha seleccionat cap expedient
 error.no.exp.selec.noDocAnnexat=Els expedients seleccionats no tenen cap document annexat per modificar
+
+error.reindexar.expedient=Error al reindexar expedient
