--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -79,6 +79,7 @@ error.ordre.camp.tasca=No s'ha pogut canviar l'ordre del camp
 
 error.permisos.disseny.entorn=No té permisos de disseny sobre aquest entorn
 error.exist.exp.defproc=Existeixen expedients amb aquesta definició de procés
+error.exist.cons=Existeixen consultes que contenen camps que pertanyen a aquesta definició de procés
 error.exist.exp.tipexp=Existeixen expedients amb aquest tipus
 error.arxius.no.valid=Aquest arxiu no és un arxiu d'exportació vàlid
 error.arxiu.importar=Error llegint l'arxiu a importar\: 
