MID: 448 MSG: Execució massiva expedient a expedient
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@746 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -286,3 +286,5 @@ error.no.exp.selec=No ha seleccionat cap expedient
 error.no.exp.selec.noDocAnnexat=Els expedients seleccionats no tenen cap document annexat per modificar
 
 error.reindexar.expedient=Error al reindexar expedient
+
+error.no.massiu=Error al programar les accions massives
