--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -10,6 +10,7 @@ expedient.consulta.select.tipusexpedient=Seleccioni un tipus d'expedient
 expedient.consulta.select.estat=Seleccioni un estat
 expedient.consulta.select.consula=Seleccioni una consulta
 expedient.consulta.select.variable=Seleccioni una variable
+expedient.consulta.select.document=Seleccioni un document
 expedient.consulta.estat=Estat
 expedient.consulta.entre=Entre
 expedient.consulta.consultar=Consultar
@@ -53,6 +54,7 @@ expedient.document.adjunt=Document adjunt
 expedient.document.document=Document
 expedient.document.documents_proces=Documents del procés
 expedient.document.adjuntar_document_proces=Adjuntar document al procés
+expedient.document.adjuntar_document_massiu=Adjuntar document als expedients
 expedient.document.confirm_esborrar_proces=Estau segur que voleu esborrar aquest document del procés?
 expedient.document.confirm_esborrar_tasca=Estau segur que voleu esborrar aquest document de la tasca?
 expedient.document.confirm_modificar_documents=Es podran modificar documents ja introduïts. Voleu continuar?
@@ -230,10 +232,13 @@ expedient.massiva.executarScriptMas=Executar scripts
 expedient.massiva.mos_ocul=Mostrar/ocultar llistat d'expedients
 expedient.massiva.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquests processos?
 expedient.massiva.confirm_exec_accio=Estau segur que voleu executar l'acció en aquests expedients?
+expedient.massiva.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquests expedients?
 expedient.massiva.tots=Tots
 expedient.massiva.exec_accio=Executar acció
 expedient.massiva.modificar_variables=Modificar variables
 expedient.massiva.documents=Modificar documents
+expedient.massiva.documents.adjuntar=Adjuntar documents
+expedient.massiva.correu=Enviar correu al finalitzar l'execució
 
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
@@ -339,16 +344,20 @@ info.expedient.anulat=L'expedient s'ha anul·lat correctament
 info.accio.executat=L'acció s'ha executat correctament
 info.accio.executat.nprimers=L'acció s'ha executat correctament en els primers {0} expedients
 info.accio.executades=Les accions s'han executat correctament
+info.accio.massiu.executat=S&#39;ha programat la reindexació de {0} expedient(s)
 info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
 info.expedient.reindexat=L'expedient s'ha reindexat correctament
 info.reindexar.executat=La reindexació s'ha realitzat correctament
 info.reindexar.executat.nprimers=La reindexació s'ha executat correctament en els primers {0} expedients
+info.massiu.permisos.no=No disposa de permisos per a modificar els expedients
 
 info.dada.proces.esborrada=La dada ha estat esborrada del procés
 info.dada.tasca.esborrada=La dada ha estat esborrada de la tasca
 
 info.dada.modificat=La dada s'ha modificat correctament
+info.dada.massiu.modificat=S&#39;ha programat la modificació de la variable {0} a {1} expedient(s)
+info.dada.massiu.error=S&#39;ha produit un error al programar la modificació de la variable {0}
 
 info.document.adjuntat=El document s'ha adjuntat correctament
 info.document.adjuntats=Els documents s'han adjuntat correctament
@@ -357,17 +366,23 @@ info.doc.proces.esborrat=El document ha estat esborrat del procés
 info.signatura.esborrat=La signatura s'ha esborrat correctament
 
 info.document.guardat=El document s'ha guardat correctament
+info.document.massiu.guardat=S&#39;ha programat la modificació del document a {0} expedient(s)
 info.document.guardats=Els documents s'ha guardat correctament
+info.document.massiu.generar=S&#39;ha programat la generació del document a {0} expedient(s)
+info.document.massiu.esborrar=S&#39;ha programat la eliminació del document a {0} expedient(s)
 
 info.informacio.modificat=La informació s'ha modificat correctament
 
 info.script.executat=L'script s'ha executat correctament
+info.script.massiu.executat=S&#39;ha programat l&#39;execució de l&#39;script a {0} expedient(s)
 info.variable.modificada=La variable s'ha modificat correctament
 info.expedient.aturat=L'expedient s'ha aturat correctament
 info.expedient.aturats=S'ha(n) aturat
+info.expedient.massiu.aturats=S&#39;ha programat l&#39;aturada de {0} expedient(s)
 info.expedient.repres=L'expedient s'ha représ correctament
 info.canvi.versio.realitzat=El canvi de versió s'ha realitzat correctament
 info.canvi.versio.realitzat.nprimers=El canvi de versió s'ha realitzat correctament en els primers {0} expedients
+info.canvi.versio.massiu=S&#39;ha programat el canvi de versió de {0} expedient(s)
 
 info.expedient.iniciat=L'expedient s'ha iniciat correctament
 
