MID: 448 MSG: Execució massiva expedient a expedient i modificació de versió de subprocessos
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@768 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -11,6 +11,7 @@ expedient.consulta.select.estat=Seleccioni un estat
 expedient.consulta.select.consula=Seleccioni una consulta
 expedient.consulta.select.variable=Seleccioni una variable
 expedient.consulta.select.document=Seleccioni un document
+expedient.consulta.select.def_proces=Seleccioni una definició de procés
 expedient.consulta.estat=Estat
 expedient.consulta.entre=Entre
 expedient.consulta.consultar=Consultar
@@ -230,20 +231,23 @@ expedient.tipus.form.restringir_grup=Restringir accés segons el grups de l'usuar
 expedient.massiva.titol=Execució d'accions massives
 expedient.massiva.info=Expedients seleccionats
 expedient.massiva.canvi=Canviar selecció
-expedient.massiva.actualitzar=Canviar versió del procés principal
+expedient.massiva.actualitzar=Canviar versió del procés
 expedient.massiva.accions=Executar acció
-expedient.massiva.executarScriptMas=Executar scripts
+expedient.massiva.executarScriptMas=Executar script
 expedient.massiva.mos_ocul=Mostrar/ocultar llistat d'expedients
 expedient.massiva.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquests processos?
 expedient.massiva.confirm_exec_accio=Estau segur que voleu executar l'acció en aquests expedients?
 expedient.massiva.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquests expedients?
 expedient.massiva.tots=Tots
 expedient.massiva.exec_accio=Executar acció
-expedient.massiva.modificar_variables=Modificar variables
-expedient.massiva.documents=Modificar documents
-expedient.massiva.documents.adjuntar=Adjuntar documents
+expedient.massiva.modificar_variables=Modificar variable
+expedient.massiva.documents=Modificar document
+expedient.massiva.documents.adjuntar=Adjuntar document
 expedient.massiva.correu=Enviar correu al finalitzar l'execució
 expedient.massiva.proces=Procés massiu
+expedient.massiva.proces.principal=Procés principal
+expedient.massiva.subprocessos=Subprocessos
+expedient.massiva.aturar=Aturar tramitació d'expedients
 
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
