MID: 448 / 472 MSG: Execució de tasques massives. Visualització d'estat de accions i tasques massives. Eliminació de CSS externs
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@804 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -4,6 +4,7 @@ expedient.consulta.gis=Obre en visor GIS
 expedient.consulta.titol=T\u00EDtol
 expedient.consulta.numero=N\u00FAmero
 expedient.consulta.datainici=Data d&#39;inici
+expedient.consulta.datahorainici=Data i hora d&#39;inici
 expedient.consulta.i=i
 expedient.consulta.tipusexpedient=Tipus d&#39;expedient
 expedient.consulta.select.tipusexpedient=Seleccioni un tipus d'expedient
@@ -230,9 +231,9 @@ expedient.tipus.form.restringir_grup=Restringir accés segons el grups de l'usuar
 
 expedient.massiva.titol=Execució d'accions massives
 expedient.massiva.info=Expedients seleccionats
-expedient.massiva.canvi=Canviar selecció
-expedient.massiva.actualitzar=Canviar versió del procés
-expedient.massiva.accions=Executar acció
+expedient.massiva.canvi=Canviar selecci&#243;
+expedient.massiva.actualitzar=Canviar versi&#243; del proc&#233;s
+expedient.massiva.accions=Executar acci&#243;
 expedient.massiva.executarScriptMas=Executar script
 expedient.massiva.mos_ocul=Mostrar/ocultar llistat d'expedients
 expedient.massiva.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquests processos?
@@ -247,7 +248,21 @@ expedient.massiva.correu=Enviar correu al finalitzar l'execució
 expedient.massiva.proces=Procés massiu
 expedient.massiva.proces.principal=Procés principal
 expedient.massiva.subprocessos=Subprocessos
-expedient.massiva.aturar=Aturar tramitació d'expedients
+expedient.massiva.aturar=Aturar tramitaci&#243; d'expedients
+expedient.massiva.tasca=Executar tasca
+
+expedient.massiva.tasca.guardar=Guardar.
+expedient.massiva.tasca.validar=Validar.
+expedient.massiva.tasca.completar=completar.
+expedient.massiva.tasca.restaurar=Restaurar.
+expedient.massiva.tasca.accio=Executar acci&#243;
+expedient.massiva.tasca.doc.guardar=Guardar document
+expedient.massiva.tasca.doc.borrar=Esborrar document
+expedient.massiva.tasca.doc.generar=Generar document
+expedient.massiva.tasca.reg.borrar=Borrar registre
+expedient.massiva.tasca.reg.guardar=Guardar registre
+
+execucions.massives.no=No s'ha programat cap acció massiva
 
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
@@ -356,10 +371,20 @@ info.accio.executades=Les accions s'han executat correctament
 info.accio.massiu.executat=S&#39;ha programat la reindexació de {0} expedient(s)
 info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
-info.expedient.reindexat=L'expedient s'ha reindexat correctament
-info.reindexar.executat=La reindexació s'ha realitzat correctament
+info.expedient.reindexat=L'expedient s&#39;ha reindexat correctament
+info.reindexar.executat=La reindexació s&#39;ha realitzat correctament
 info.reindexar.executat.nprimers=La reindexació s'ha executat correctament en els primers {0} expedients
 info.massiu.permisos.no=No disposa de permisos per a modificar els expedients
+info.tasca.massiu.completar=S&#39;ha programat la finalització de {0} tasca(ques)
+info.tasca.massiu.guardar=S&#39;ha programat el guardat de {0} tasca(ques)
+info.tasca.massiu.validar=S&#39;ha programat la validació de {0} tasca(ques)
+info.tasca.massiu.restaurar=S&#39;ha programat la restauració de {0} tasca(ques)
+info.tasca.massiu.accio=S&#39;ha programat la execució de {0} acció(ons)
+info.tasca.massiu.document.generar=S&#39;ha programat la generació del document a {0} tasca(ques)
+info.tasca.massiu.document.guardar=S&#39;ha programat el guardat del document a {0} tasca(ques)
+info.tasca.massiu.document.esborrar=S&#39;ha programat la eliminació del document a {0} tasca(ques)
+info.tasca.massiu.registre.esborrar=S&#39;ha programat la eliminació d&#39;un registre a {0} tasca(ques)
+info.tasca.massiu.registre.guardar=S&#39;ha programat el guardat d&#39;un registre a {0} tasca(ques)
 
 info.dada.proces.esborrada=La dada ha estat esborrada del procés
 info.dada.tasca.esborrada=La dada ha estat esborrada de la tasca
@@ -532,6 +557,11 @@ comuns.son_oblig=són obligatoris
 comuns.tipus_exp=Tipus d'expedient
 comuns.tract_dona=Tractament dona
 comuns.tract_home=Tractament home
+comuns.massiu=Execucions massives
+comuns.tancar=Tancar
+comuns.progres=Progrés
+comuns.refrescar=Refrescar
+comuns.mes.dades=Més dades
 
 alerta.llistat.alertes=Alertes
 alerta.llistat.confirmacio=Estau segur que voleu esborrar aquesta tarea?
@@ -1258,6 +1288,7 @@ tasca.signa.signar=Signar
 tasca.signa.alert.nosel=No s'ha seleccionat cap certificat per a signar
 tasca.signa.alert.error=Error al signar el document (comprovi la contrasenya)
 tasca.signa.alert.certerr=Error al obtenir la llista de certificats disponibles
+tasca.signa.massiu.no_es_podran=No es poden signar documents massivament
 
 error.error=Error
 error.sa_produit=S'ha produït un error a l'aplicació
