MID: 487 MSG: Agafar tasques de grup massivament
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@808 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -562,6 +562,7 @@ comuns.tancar=Tancar
 comuns.progres=Progrés
 comuns.refrescar=Refrescar
 comuns.mes.dades=Més dades
+comuns.objectsPerPage=Resultats per pàgina
 
 alerta.llistat.alertes=Alertes
 alerta.llistat.confirmacio=Estau segur que voleu esborrar aquesta tarea?
@@ -1225,6 +1226,9 @@ tasca.gllistat.baixa=Baixa
 tasca.gllistat.m_baixa=Molt baixa
 tasca.gllistat.data_limit=Data límit&nbsp;
 tasca.gllistat.agafar=Agafar
+tasca.gllistat.agafar.massiu=Agafar seleccionats
+tasca.gllistat.agafar.OK=S''han agafat {0} tasques
+tasca.gllistat.agafar.KO=Error al agafar les tasques:
 
 tasca.info.confirmacio=Estau segur que voleu delegar aquesta tasca?
 tasca.info.info_tasca=Informació de la tasca
