MID: 494 i 495 MSG: Actualitzar versió d'expedients massivament al importar una nova definició de procés i Reassignar tasques massivament
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@815 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -152,6 +152,7 @@ error.reprendre.expedient=No s'ha pogut reprendre l'expedient
 error.expedient.no.aturat=Aquest expedient no està aturat
 error.especificar.versio.proces=No s'ha especificat cap versió de procés
 error.canviar.versio.proces=No s'ha pogut canviar la versió de procés
+error.executar.reassignacio=No s'ha pogut realitzar la reassignació
 
 error.exist.exp.mateix.numero=Ja existeix un expedient amb el mateix número, torni a iniciar l'expedient
 error.iniciar.expedient=S'ha produït un error iniciant l'expedient
