--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -13,6 +13,7 @@ expedient.consulta.select.consula=Seleccioni una consulta
 expedient.consulta.select.variable=Seleccioni una variable
 expedient.consulta.select.document=Seleccioni un document
 expedient.consulta.select.def_proces=Seleccioni una definició de procés
+expedient.consulta.select.tasca=Seleccioni una tasca
 expedient.consulta.estat=Estat
 expedient.consulta.entre=Entre
 expedient.consulta.consultar=Consultar
@@ -106,6 +107,7 @@ expedient.eines.confirm_modificar_document=Estau segur que voleu modificar aques
 expedient.eines.confirm_reprendre_tramitacio=Estau segur que voleu reprendre la tramitació d'aquest expedient?
 expedient.eines.confirm_reindexar_expedient=Estau segur que voleu reindexar l'expedient?
 expedient.eines.confirm_reindexar_expedients=Estau segur que voleu reindexar el(s) expedient(s)?
+expedient.eines.confirm_reassignar_expedients=Estau segur que voleu reassignar la(es) tasca(ques)?
 expedient.eines.confirm_executar_script_proces=Estau segur que voleu executar aquest script en aquest procés?
 expedient.eines.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquest procés?
 expedient.eines.aturar_tramitacio=Aturar la tramitació de l'expedient
@@ -114,10 +116,14 @@ expedient.eines.motiu=Motiu
 expedient.eines.execucio_scripts=Execució d'scripts
 expedient.eines.reindexa_proces=Reindexar l'expedient
 expedient.eines.reindexar.expedients=Reindexar expedients
+expedient.eines.reassignar.expedients=Reassignar tasques
 expedient.eines.script=Script
 expedient.eines.canviar_versio_proces=Canviar la versió del procés
 expedient.eines.canviar_versio=Canviar a la versió
 expedient.eines.modificar_variables=Variables
+expedient.eines.reassignar.expedients=Reassignar tasca
+expedient.eines.reassignar.tipus=Tipus d''expressió
+expedient.eines.reassignar_tasques=Tasca
 expedient.info.informacio=Informació de l'expedient
 expedient.info.confirm.accio.executar=Estau segur que voleu executar aquesta acció?
 expedient.info.confirm.relacio.esborrar=Estau segur que voleu esborrar aquesta relació?
@@ -249,8 +255,9 @@ expedient.massiva.proces=Procés massiu
 expedient.massiva.proces.principal=Procés principal
 expedient.massiva.subprocessos=Subprocessos
 expedient.massiva.aturar=Aturar tramitaci&#243; d'expedients
+expedient.massiva.reassignar.buit=L'expedient no té cap tasca que coincideixi amb la tasca a reassignat
+expedient.massiva.reassignar.no.open=L''expedient disposa de {0} tasques que coincideixen amb la rasca a reassignar, però només n''hi havia {1} de actives que s''han pogut reassignar 
 expedient.massiva.tasca=Executar tasca
-
 expedient.massiva.tasca.guardar=Guardar.
 expedient.massiva.tasca.validar=Validar.
 expedient.massiva.tasca.completar=completar.
@@ -261,6 +268,7 @@ expedient.massiva.tasca.doc.borrar=Esborrar document
 expedient.massiva.tasca.doc.generar=Generar document
 expedient.massiva.tasca.reg.borrar=Borrar registre
 expedient.massiva.tasca.reg.guardar=Guardar registre
+expedient.massiva.actualitzar.dp=Actualitzar definici&#243 de proc&#233;s
 
 execucions.massives.no=No s'ha programat cap acció massiva
 
@@ -369,6 +377,7 @@ info.accio.executat=L'acció s'ha executat correctament
 info.accio.executat.nprimers=L'acció s'ha executat correctament en els primers {0} expedients
 info.accio.executades=Les accions s'han executat correctament
 info.accio.massiu.executat=S&#39;ha programat la reindexació de {0} expedient(s)
+info.accio.massiu.reassignat=S&#39;ha programat la reassignació de {0} tasca(ques)
 info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
 info.expedient.reindexat=L'expedient s&#39;ha reindexat correctament
@@ -1318,3 +1327,7 @@ js.helforms.carreg_dades=Carregant dades...
 js.helforms.carregant=Carregant...
 js.helforms.selec_valor=Seleccioni un valor
 js.helforms.confirmacio=L'execució d'aquesta acció provocarà que es guardin automaticament les dades de la tasca. Voleu continuar?
+
+filtre.expressio.usuari=Usuari
+filtre.expressio.grup=Area
+filtre.expressio.expressio=Expressió
